<resources>
    <string name="app_name">ATL Star</string>
    <string name="hello_blank_fragment_old">Test</string>
    <string name="home_fragment">Home</string>
    <string name="featured_text">Featured Places</string>
    <string name="view_all_text">View All</string>
    <string name="intro_header_text">Celebrity Hang Outs</string>
    <string name="intro_description_text">Explore the hottest celebrity hang out spots in the city of Atlanta. Before partaking in the fun, read the Important Information section below.</string>
    <string name="disclaimer_text">These are only suggestions and we cannot guarantee that you
        will encounter a celebrity at the listed locations. \n\nPlease remember to be polite and
        respect the personal boundaries of others. In Atlanta, the norm is that celebrities are
        able to be out in public without over the top reactions from fans and others. \n\nYou
        are not authorized to use this app for the purpose of stalking and/ or harassing celebrities.</string>
    <string name="disclaimer_header_text">Important Information</string>
    <string name="home_slogan">Hollywood of the South</string>
    <string name="dine_slogan">where celebs eat</string>
    <string name="shop_slogan">where celebs shop</string>
    <string name="venues_slogan">where celebs play</string>
    <string name="nightlife_slogan">where celebs party</string>
    <string name="dine_fragment">Dining</string>
    <string name="shop_fragment">Shopping</string>
    <string name="venues_fragment">Venues</string>
    <string name="venues_alternative">Sports &amp; Concert Venues</string>
    <string name="nightlife_fragment">Nightlife</string>
    <string name="nightlife_alternative">Bars, Lounges &amp; Dance Clubs</string>
    <string name="image_content_description">Image of Attraction</string>
    <string name="tab_image_content_description">Category Image</string>
    <string name="subtitle_prefix_detail_screen">Celebrity </string>
    <string name="like_button_content_description">Like Button</string>
    <string name="phone_prefix"><b>Phone: </b></string>
    <string name="website_prefix"><b>Website: </b></string>
    <string name="url_prefix">http://</string>
    <string name="more_info_link">View More Info</string>
    <string name="less_info_link">View Less Info</string>
    <string name="share_info">Share this Attraction with&#8230;</string>
    <string name="action_settings">Reset Favorites</string>
    <string name="action_about">About App</string>
    <string name="fav_saved">Saved</string>
    <string name="fav_save">Save</string>
    <string name="call_icon">Call</string>
    <string name="share_icon">Share</string>
    <string name="web_icon">Web</string>
    <string name="map_icon">Map</string>
    <string name="like_icon">Save</string>
    <string name="detail_blurb_header">Who You\'ll See</string>
    <string name="detail_descrip_header">What You\'ll Find</string>
    <string name="attraction_name_short_example">Park 75</string>
    <string name="attraction_name_long_example">The Shops Buckhead Atlanta</string>
    <string name="attraction_address_multiline_example">70 West Paces Ferry Rd NW\nAtlanta, GA
        30305</string>
    <string name="attraction_address_single_line_example">70 West Paces Ferry Rd NW, Atlanta, GA 30305</string>
    <string name="attraction_phone_example">(404) 262&#45;2675</string>
    <string name="attraction_description_example">You know what celebrities really love? Eating
        crazy&#45;expensive cuts of steak! Because this tends to cut the&#8230;</string>
    <string name="attraction_detail_description_example">An Atlanta icon known for its exceptional food and service, Chops consistently ranks as one of the top ten steakhouses in the country. Exquisite seafood flown in fresh daily and the very best USDA prime aged beef are served with style in the warm ambiance of the dark wood dining room. Whether you’re dining for business or pleasure, a meal at Chops is sure to make a lasting impression. (Source: TripAdvisor.com)</string>
    <string name="attraction_detail_blurb_example">Visit Chops Lobster Bar and you might see Larry David, Russell Crowe, Justin Bieber, Billy Bob Thornton, Vin Diesel, Dennis Quaid, Kate Bosworth, or Ryan Gosling!</string>
    <string name="three_dots">&#8230;</string>
    <string-array name="attraction_name">
        <item>Chops Lobster Bar</item>
        <item>Park 75</item>
        <item>Ponce City Market</item>
        <item>South City Kitchen</item>
        <item>Clermont Lounge</item>
        <item>Compound</item>
        <item>Opera Nightclub</item>
        <item>Puff &amp; Petals</item>
        <item>STK Atlanta</item>
        <item>Lenox Square</item>
        <item>Phipps Plaza</item>
        <item>The Shops Buckhead Atlanta</item>
        <item>Fox Theatre</item>
        <item>Mercedes Benz Stadium</item>
        <item>Philips Arena</item>
        <item>SunTrust Park</item>
    </string-array>
    <string-array name="attraction_category">
        <item>Dining</item>
        <item>Dining</item>
        <item>Dining</item>
        <item>Dining</item>
        <item>Nightlife</item>
        <item>Nightlife</item>
        <item>Nightlife</item>
        <item>Nightlife</item>
        <item>Nightlife</item>
        <item>Shopping</item>
        <item>Shopping</item>
        <item>Shopping</item>
        <item>Venues</item>
        <item>Venues</item>
        <item>Venues</item>
        <item>Venues</item>
    </string-array>
    <string-array name="attraction_address_multi">
        <item>70 West Paces Ferry Rd NW\nAtlanta, GA 30305</item>
        <item>75 14th St NE\nAtlanta, GA 30309</item>
        <item>675 Ponce De Leon Ave NE\nAtlanta, GA 30308</item>
        <item>1144 Crescent Ave NE\nAtlanta, GA 30309</item>
        <item>789 Ponce De Leon Ave NE\nAtlanta, GA 30306</item>
        <item>1008 Brady Ave NW\nAtlanta, GA 30318</item>
        <item>1150 Crescent Ave NE\nSuite B\nAtlanta, GA 30309</item>
        <item>367 Edgewood Ave SE\nAtlanta, GA 30312</item>
        <item>1075 Peachtree St NE\nAtlanta, GA 30309</item>
        <item>3393 Peachtree Rd NE\nAtlanta, GA 30326</item>
        <item>3500 Peachtree Rd NE\nAtlanta, GA 30326</item>
        <item>3035 Peachtree Rd NE\nAtlanta, GA 30305</item>
        <item>660 Peachtree St NE\nAtlanta, GA 30308</item>
        <item>1 AMB Drive NW\nAtlanta, GA 30313</item>
        <item>1 Philips Dr\nAtlanta, GA 30303</item>
        <item>755 Battery Ave SE\nAtlanta, GA 30339</item>
    </string-array>
    <string-array name="attraction_address">
        <item>70 West Paces Ferry Rd NW, Atlanta, GA</item>
        <item>75 14th St NE, Atlanta, GA</item>
        <item>675 Ponce De Leon Ave NE, Atlanta, GA</item>
        <item>1144 Crescent Ave NE, Atlanta, GA </item>
        <item>789 Ponce De Leon Ave NE, Atlanta, GA</item>
        <item>1008 Brady Ave NW, Atlanta, GA </item>
        <item>1150 Crescent Ave NE, Suite B, Atlanta, GA</item>
        <item>367 Edgewood Ave SE, Atlanta, GA </item>
        <item>1075 Peachtree St NE, Atlanta, GA</item>
        <item>3393 Peachtree Rd NE, Atlanta, GA</item>
        <item>3500 Peachtree Rd NE, Atlanta, GA</item>
        <item>3035 Peachtree Rd NE, Atlanta, GA</item>
        <item>660 Peachtree St NE, Atlanta, GA</item>
        <item>1 AMB Drive NW, Atlanta, GA</item>
        <item>1 Philips Dr, Atlanta, GA</item>
        <item>755 Battery Ave SE, Atlanta, GA</item>
    </string-array>
    <string-array name="attraction_coordinates">
        <item>geo:0,0?q=33.84,-84.38144(Chops Lobster Bar)</item>
        <item>geo:0,0?q=33.78616,-84.38529(Park 75)</item>
        <item>geo:0,0?q=33.77222,-84.36607(Ponce City Market)</item>
        <item>geo:0,0?q=33.786,-84.38456(South City Kitchen)</item>
        <item>geo:0,0?q=33.77336,-84.36135(Clermont Lounge)</item>
        <item>geo:0,0?q=33.78423,-84.41389(Compound)</item>
        <item>geo:0,0?q=33.786,-84.38456(Opera Nightclub)</item>
        <item>geo:0,0?q=33.75428,-84.37655(Puff &amp; Petals)</item>
        <item>geo:0,0?q=33.78381,-84.38317(STK Atlanta)</item>
        <item>geo:0,0?q=33.84773,-84.36225(Lenox Square)</item>
        <item>geo:0,0?q=33.85296,-84.36042(Phipps Plaza)</item>
        <item>geo:0,0?q=33.83874,-84.36671(The Shops Buckhead Atlanta)</item>
        <item>geo:0,0?q=33.77261,-84.38559(Fox Theatre)</item>
        <item>geo:0,0?q=33.75637,-84.40115(Mercedes Benz Stadium)</item>
        <item>geo:0,0?q=33.75738,-84.39347(Philips Arena)</item>
        <item>geo:0,0?q=33.88363,-84.47554(SunTrust Park)</item>
    </string-array>
    <string-array name="attraction_phone">
        <item>(404) 262&#45;2675</item>
        <item>(404) 253&#45;3840</item>
        <item>(404) 900&#45;7900</item>
        <item>(404) 873&#45;7358</item>
        <item>(404) 874&#45;4783</item>
        <item>(404) 898&#45;1702</item>
        <item>(404) 874&#45;3006</item>
        <item>(404) 555&#45;1212</item>
        <item>(404) 793&#45;0144</item>
        <item>(404) 233&#45;7575</item>
        <item>(404) 261&#45;7910</item>
        <item>(404) 939&#45;9270 </item>
        <item>(404) 881&#45;2100</item>
        <item>(470) 341&#45;5000</item>
        <item>(404) 878&#45;3000</item>
        <item>(404) 577&#45;9100</item>
    </string-array>
    <string-array name="attraction_phone_link">
        <item>tel:14042622675</item>
        <item>tel:14042533840</item>
        <item>tel:14049007900</item>
        <item>tel:14048737358</item>
        <item>tel:14048744783</item>
        <item>tel:14048981702</item>
        <item>tel:14048743006</item>
        <item>tel:14045551212</item>
        <item>tel:14047930144</item>
        <item>tel:14042337575</item>
        <item>tel:14042617910</item>
        <item>tel:14049399270</item>
        <item>tel:14048812100</item>
        <item>tel:14703415000</item>
        <item>tel:14048783000</item>
        <item>tel:14045779100</item>
    </string-array>
    <string-array name="attraction_website">
        <item>www.buckheadrestaurants.com/chops-lobster-bar</item>
        <item>www.fourseasons.com/atlanta/dining/restaurants/park_75</item>
        <item>www.poncecitymarket.com</item>
        <item>midtown.southcitykitchen.com</item>
        <item>clermontlounge.net</item>
        <item>www.compoundatl.com</item>
        <item>www.operaatlanta.com</item>
        <item>instagram.com/puffandpetalslounge</item>
        <item>togrp.com/venue/stk-atlanta</item>
        <item>www.simon.com/mall/lenox-square</item>
        <item>www.simon.com/mall/phipps-plaza</item>
        <item>theshopsbuckheadatlanta.com</item>
        <item>www.foxtheatre.org</item>
        <item>mercedesbenzstadium.com</item>
        <item>www.philipsarena.com</item>
        <item>mlb.mlb.com/atl/ballpark/information</item>
    </string-array>
</resources>